--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>once again</title>
         <link rel = "stylesheet" href = "styles.css">
-        <script src = "scriptdraft3.js" defer></script>
+        <script src = "scriptdraft3-revised.js" defer></script>
     </head>
     <body>
         <div class = "main">
@@ -34,6 +34,7 @@
                     </div>
                 </div>
             </div>
+            <div id = "clearBtn"><p>clear</p></div>
         </div>
     </body>
 </html>
