fix app logic glitch and improve ui

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=""en">
     <head>
         <meta charset="UTF-8">
-        <title>once again</title>
+        <title>numPadulator</title>
         <link rel = "stylesheet" href = "styles.css">
         <script src = "scriptdraft3-revised.js" defer></script>
     </head>
@@ -13,6 +13,7 @@
                 </div>
                 <div class = "input">
                     <div class = "numButtonsGrid">
+                        <div id = "clearBtn">clear</div>
                         <div class = "numButtons" id = "divide">/</div>
                         <div class = "numButtons" id = "multiply">*</div>
                         <div class = "numPad numButtons" data-num = 7 id = "sevenBtn">7</div>
@@ -34,7 +35,6 @@
                     </div>
                 </div>
             </div>
-            <div id = "clearBtn"><p>clear</p></div>
         </div>
     </body>
 </html>
