add button animations, initialise rewrite file

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 </div>
                 <div class = "input">
                     <div class = "numButtonsGrid">
-                        <div id = "clearBtn">clear</div>
-                        <div class = "numButtons" id = "divide">/</div>
-                        <div class = "numButtons" id = "multiply">*</div>
+                        <div id = "clearBtn" class = "ops">clear(space)</div>
+                        <div class = "numButtons ops" id = "divide">/</div>
+                        <div class = "numButtons ops" id = "multiply">*</div>
                         <div class = "numPad numButtons" data-num = 7 id = "sevenBtn">7</div>
                         <div class = "numPad numButtons" data-num = 8 id = "eightBtn">8</div>
                         <div class = "numPad numButtons" data-num = 9 id = "nineBtn">9</div>
@@ -29,9 +29,9 @@
                         <div class = "numPad numButtons" data-num = "." id = "decimal">.</div>
                     </div>
                     <div class ="operatorsGrid">
-                        <div class = "operators" id = "subtract">-</div>
-                        <div class = "operators" id = "add">+</div>
-                        <div class = "operators" id = "equals">=</div>
+                        <div class = "operators ops" id = "subtract">-</div>
+                        <div class = "operators ops" id = "add">+</div>
+                        <div class = "operators ops" id = "equals">=</div>
                     </div>
                 </div>
             </div>
