--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=""en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=300, initial-scale=1.0">
+        <meta name="viewport" content="width=viewport, initial-scale=1.0">
         <title>numPadulator</title>
         <link rel = "stylesheet" href = "styles.css">
         <script src = "scriptdraft3-revised.js" defer></script>
